force-app/main/default/objects/CommandeSousVente__c/CommandeSousVente__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les commandes de sous vente de la pharmacie.</description>
    <label>Commande Sous Vente</label>
    <nameField>
        <displayFormat>CmdSousVente-{0000}</displayFormat>
        <label>Commande Sous Vente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commandes Sous Ventes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>