force-app/main/default/objects/CommandeSousVente__c/fields/MontantPayer__c.field-meta.xml
<CustomField>
    <fullName>MontantPayer__c</fullName>
    <description>Ce Champs représente le Montant Payé</description>
    <label>Montant Payer</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>