force-app/main/default/objects/CommandeSousVente__c/fields/MontantTotal__c.field-meta.xml
<CustomField>
    <fullName>MontantTotal__c</fullName>
    <description>Ce Champs représente le Montant Total</description>
    <label>Montant Total</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>