force-app/main/default/objects/CommandeSousVente__c/fields/QuantiteACommander__c.field-meta.xml
<CustomField>
    <fullName>QuantiteACommander__c</fullName>
    <description>Ce Champs représenté la Quantité à commander</description>
    <label>Quantite A Commander</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>