force-app/main/default/objects/CommandeSousVente__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>Ce Champs représente Statut de la commande (en cours, livrée...)</description>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EnCours</fullName>
                <default>true</default>
                <label>En Cours</label>
            </value>
            <value>
                <fullName>Bloquer</fullName>
            </value>
            <value>
                <fullName>Annuler</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>