force-app/main/default/objects/CommandeSousVente__c/listViews/CommandeSousVenteAnnulees.listView-meta.xml
<ListView>
    <fullName>CommandeSousVenteAnnulees</fullName>
    <columns>NAME</columns>
    <columns>QuantiteACommander__c</columns>
    <columns>MontantTotal__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Annuler</value>
    </filters>
    <label>Commande Sous Vente Annulées</label>
</ListView>