force-app/main/default/objects/CommandeSousVente__c/listViews/CommandeSousVenteBloques.listView-meta.xml
<ListView>
    <fullName>CommandeSousVenteBloques</fullName>
    <columns>NAME</columns>
    <columns>QuantiteACommander__c</columns>
    <columns>MontantTotal__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Bloquer</value>
    </filters>
    <label>Commande Sous Vente Bloqués</label>
</ListView>