force-app/main/default/objects/CommandeSousVente__c/listViews/CommandeSousVenteEnCour.listView-meta.xml
<ListView>
    <fullName>CommandeSousVenteEnCour</fullName>
    <columns>NAME</columns>
    <columns>QuantiteACommander__c</columns>
    <columns>MontantTotal__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>EnCours</value>
    </filters>
    <label>Commande Sous Vente En Cour</label>
</ListView>