force-app/main/default/objects/CommandeSousVente__c/listViews/CommandesSousVentes.listView-meta.xml
<ListView>
    <fullName>CommandesSousVentes</fullName>
    <columns>NAME</columns>
    <columns>QuantiteACommander__c</columns>
    <columns>MontantTotal__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <label>Commandes Sous Ventes</label>
</ListView>